--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  >
-    <!--enable this for storing  bitmap-->
-    <!--<application android:requestLegacyExternalStorage="true">
-    </application>-->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
